--- a/css/monitor.css
+++ b/css/monitor.css
@@ -138,23 +138,25 @@
 #section4 p {
     font-family: 'Noto Sans', sans-serif;
     color:#36454f;
-    margin-left: 100px ;
-    padding: 10px;
-    margin-top: 400px;
+    margin-left: 450px;
+    margin-top: 50px;
+   
   }
 #section4 h1 {
     font-family: 'Noto Sans', sans-serif;
     color:#36454f;
-    margin-left: 130px;
+    margin-left: 500px;
+   padding: 100px 0px 0px 0px;
   }
 
 #footer {
     width: 100%;
     height: 50px;
     margin-top: 20px;
-    font-size: 25px;
+    font-size: 15px;
     box-shadow: inset 7px 7px 15px grey;
     padding: 25px 0px 25px 0px;
+    list-style: none;
 }
 footer img {
     margin-left: 49%; 
