--- a/css/monitor.css
+++ b/css/monitor.css
@@ -151,12 +151,16 @@
 
 #footer {
     width: 100%;
-    height: 50px;
+    height: 100px;
     margin-top: 20px;
+    font-family: 'Noto Sans', sans-serif;
+    color:#36454f;
     font-size: 15px;
     box-shadow: inset 7px 7px 15px grey;
-    padding: 25px 0px 25px 0px;
-    list-style: none;
+    padding: 25px 0px 25px 0px;  
+}
+#footer p {
+    margin-left: 50px;
 }
 footer img {
     margin-left: 49%; 
