--- a/css/monitor.css
+++ b/css/monitor.css
@@ -26,6 +26,13 @@
 .podswietl {
     opacity: 0.2 ;
 }
+#stronka {
+    font-family: 'Noto Sans', sans-serif;
+    color: #36454f;
+    font-size: 30px;
+    padding: 40px 0px 15px 40%;
+    weight: bold;
+}
 #section1 {
     width: 50%;
     height: 500px;
@@ -43,7 +50,6 @@
     font-family: 'Noto Sans', sans-serif;
     margin-top: 100px;
     text-shadow: 7px 7px 15px grey;
-  
 }
 #section_1 {
     font-family: 'Noto Sans', sans-serif;
@@ -120,12 +126,12 @@
     width: 80px;
     height: 80px;
     margin-top: 50px;
-    margin-left: 34%;
+    margin-left: 29%;
 }
 #section3 p {
     font-family: 'Noto Sans', sans-serif;
     color: #36454f;
-    padding: 25px 90px 10px 80px;
+    padding: 30px 90px 10px 80px;
     font-size: 25px;
     margin-left: 32%;
 }
