--- a/css/tablet1.css
+++ b/css/tablet1.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 500px) and (max-width: 823px) {
+@media screen and (min-width: 823px) and (max-width: 1213px) {
 
     html {
         scroll-behavior: scroll;
@@ -7,75 +7,249 @@
 #nav {
     width: 100%;
     height: 50px;
-    background-color: white;
-    font-size: 20px;
+    font-size: 25px;
     color: lightblue;
+    box-shadow: 7px 7px 15px grey;
+    padding: 25px 0px 25px 0px;
 }
 #nav ul li {
     float: left;
-    margin-left: 40px;
+    margin-left: 10%;
     list-style: none;
     font-family: 'Noto Sans', sans-serif;
+
 }
 #nav ul li a {
     text-decoration: none;
+    color: purple;
 }
-
-
+.podswietl {
+    opacity: 0.2 ;
+}
+#stronka {
+    font-family: 'Noto Sans', sans-serif;
+    color: #36454f;
+    font-size: 30px;
+    padding: 40px 0px 15px 40%;
+    weight: bold;
+}
 #section1 {
-    width: 100%;
+    width: 50%;
     height: 500px;
-    background-image: url('/image/blue.jpg');
+    float: left;
+    white-space: wrap;
 }
 #section1 img {
-    margin-left: 30%;
+    margin-left: 10%;
+    margin-top: 100px;
+    box-shadow: 7px 7px 15px grey;
 }
 #section1 p {
     color: #36454f;
-    margin-left: 20% ;
+    margin-left: 50px;
     font-family: 'Noto Sans', sans-serif;
-  
+    margin-top: 100px;
+    text-shadow: 7px 7px 15px grey;
+}
+#section_1 {
+    font-family: 'Noto Sans', sans-serif;
+    margin-top: 130px;
+    height: 500px;
+    text-shadow: 7px 7px 15px grey;
+}
+#section_1span1 {
+        position: relative;
+        -webkit-animation: mymove1 3s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove1 3s ;   
+      }
+@-webkit-keyframes mymove1 {
+        from {left: 1000px;}
+        to {left: 0px;}
+      }
+ #section_1span2 {
+        position: relative;
+        -webkit-animation: mymove 4s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 4s linear;
+      
+      } 
+ #section_1span3 {
+        position: relative;
+        -webkit-animation: mymove1 5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove1 5s ;  
+      }   
+#section_1span4 {
+        position: relative;
+        -webkit-animation: mymove 6s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 6s ;   
+      }
+#section_1span5 {
+        position: relative;
+        -webkit-animation: mymove1 7s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove1 7s ; 
+      }
+#section_1span6 {
+        position: relative;
+        -webkit-animation: mymove 8s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 8s ;
+      }
+#div1 {
+    width: 100%;
+    height: 800px;
+    background-image: url('/image/pink.jpg');
 }
 #section2 {
-    width: 100%;
-    height: 500px;
-    background-image: url('/image/pink.jpg');
+    float: left;
+    margin-top: 100px;
+    white-space: nowrap;
+    margin-left: 70px;
+    white-space: wrap;
+}
+#section_2 {
+    float: left;
+}
+#section_2 img {
+    margin-top: 150px;
+    margin-left: 300px;
 }
 #section2 p {
     color:white;
     font-family: 'Noto Sans', sans-serif;
     padding: 25px 90px 10px 0px;
-    margin-left: 30%;
-}
-#section2 img {
-    margin-left: 25%;
+    font-size: 20px;
 }
 #section3 {
     width: 100%;
-    height: 468px;
-    background-image: url('/image/wier.jpg');
+    height: 800px;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 #section3 img {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     margin-top: 50px;
-    margin-left: 100px;
+    margin-left: 29%;
 }
 #section3 p {
     font-family: 'Noto Sans', sans-serif;
     color: #36454f;
-    padding: 25px 90px 10px 80px;
+    padding: 30px 90px 10px 80px;
+    font-size: 25px;
+    margin-left: 32%;
 }
 #section4 {
     width: 100%;
-    height: 500px;
-    background-image: url('/image/trawa.jpg');
-    margin-top: 10px;
+    height: 800px;
+    background-color:lightblue; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to right,lightblue , white); /* Standard syntax (must be last) */
 }
+@-webkit-keyframes mymove {
+    from {left: -1500px;}
+    to {left: 0px;}
+  }
+#section4 h1 {
+    font-family: 'Noto Sans', sans-serif;
+    color:#36454f;
+    margin-left: 500px;
+   padding: 100px 0px 0px 0px;
+  }
+  #section4_1 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 0.5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 0.5s ;
+}
+#section4_2 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 1s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 1s ;   
+      }
 
+ #section4_3 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 1.5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 1.5s;  
+      } 
+ #section4_4 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 2s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 2s ;  
+      }   
+#section4_5 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 2.5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 2.5s ;   
+      }
+#section4_6 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 3s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 3s ; 
+      }
+#section4_7 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 3.5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 3.5s ;
+      }
+#section4_8 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 4s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 4s ;
+      }
+#section4_9 {
+    font-family: 'Noto Sans', sans-serif;
+    text-shadow: 7px 7px 15px grey;
+    color:#36454f;
+    margin-left: 450px;
+        position: relative;
+        -webkit-animation: mymove 4.5s linear; /* Safari 4.0 - 8.0 */
+        animation: mymove 4.5s ;
+      }
+
+#footer {
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+    font-family: 'Noto Sans', sans-serif;
+    color:#36454f;
+    font-size: 15px;
+    box-shadow: inset 7px 7px 15px grey;
+    padding: 25px 0px 25px 0px;  
+}
+#footer p {
+    margin-left: 50px;
+}
 footer img {
-    margin-left: 46%;
+    margin-left: 49%; 
 }
 
 
