--- a/css/tablet1.css
+++ b/css/tablet1.css
@@ -7,7 +7,7 @@
 #nav {
     width: 100%;
     height: 50px;
-    font-size: 25px;
+    font-size: 15px;
     color: lightblue;
     box-shadow: 7px 7px 15px grey;
     padding: 25px 0px 25px 0px;
@@ -43,6 +43,8 @@
     margin-left: 10%;
     margin-top: 100px;
     box-shadow: 7px 7px 15px grey;
+    width: 300px;
+    height: 90px;
 }
 #section1 p {
     color: #36454f;
@@ -100,7 +102,6 @@
 #section2 {
     float: left;
     margin-top: 100px;
-    white-space: nowrap;
     margin-left: 70px;
     white-space: wrap;
 }
@@ -108,13 +109,13 @@
     float: left;
 }
 #section_2 img {
-    margin-top: 150px;
-    margin-left: 300px;
+    margin-top: 50px;
+    margin-left: 100px;
 }
 #section2 p {
     color:white;
     font-family: 'Noto Sans', sans-serif;
-    padding: 25px 90px 10px 0px;
+    padding: 0px 90px 10px 0px;
     font-size: 20px;
 }
 #section3 {
@@ -149,14 +150,14 @@
 #section4 h1 {
     font-family: 'Noto Sans', sans-serif;
     color:#36454f;
-    margin-left: 500px;
+    margin-left: 300px;
    padding: 100px 0px 0px 0px;
   }
   #section4_1 {
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 0.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 0.5s ;
@@ -165,7 +166,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 1s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 1s ;   
@@ -175,7 +176,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 1.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 1.5s;  
@@ -184,7 +185,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 2s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 2s ;  
@@ -193,7 +194,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 2.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 2.5s ;   
@@ -202,7 +203,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 3s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 3s ; 
@@ -211,7 +212,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 3.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 3.5s ;
@@ -220,7 +221,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 4s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 4s ;
@@ -229,7 +230,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 250px;
         position: relative;
         -webkit-animation: mymove 4.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 4.5s ;
