--- a/css/tablet1.css
+++ b/css/tablet1.css
@@ -43,6 +43,9 @@
     margin-left: 20%;
     margin-top: 100px;
     box-shadow: 7px 7px 15px grey;
+    width: 250px;
+    height: 20px;
+    white-space: wrap;
 }
 #section1 p {
     color: #36454f;
@@ -125,6 +128,7 @@
     height: 80px;
     margin-top: 50px;
     margin-left: 19%;
+    white-space: wrap;
 }
 #section3 p {
     font-family: 'Noto Sans', sans-serif;
@@ -145,14 +149,14 @@
 #section4 h1 {
     font-family: 'Noto Sans', sans-serif;
     color:#36454f;
-    margin-left: 500px;
+    margin-left: 300px;
    padding: 100px 0px 0px 0px;
   }
   #section4_1 {
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 0.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 0.5s ;
@@ -161,7 +165,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 1s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 1s ;   
@@ -171,7 +175,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 1.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 1.5s;  
@@ -180,7 +184,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 2s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 2s ;  
@@ -189,7 +193,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 2.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 2.5s ;   
@@ -198,7 +202,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 3s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 3s ; 
@@ -207,7 +211,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 3.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 3.5s ;
@@ -216,7 +220,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 4s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 4s ;
@@ -225,7 +229,7 @@
     font-family: 'Noto Sans', sans-serif;
     text-shadow: 7px 7px 15px grey;
     color:#36454f;
-    margin-left: 450px;
+    margin-left: 150px;
         position: relative;
         -webkit-animation: mymove 4.5s linear; /* Safari 4.0 - 8.0 */
         animation: mymove 4.5s ;
