--- a/css/tablet.css
+++ b/css/tablet.css
@@ -45,6 +45,8 @@
     width: 100px;
     height: -220px;
     white-space: wrap;
+    -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
 #section1 p {
     color: #36454f;
