--- a/css/tablet1.css
+++ b/css/tablet1.css
@@ -46,6 +46,8 @@
     width: 250px;
     height: 20px;
     white-space: wrap;
+    -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
 #section1 p {
     color: #36454f;
