--- a/css/tel.css
+++ b/css/tel.css
@@ -33,24 +33,26 @@
 }
 #section1 {
     width: 50%;
-    height: 800px;
-    float: left;
-}
-#section1 img {
-    margin-left: 10%;
-    margin-top: 100px;
-    box-shadow: 7px 7px 15px grey;
-    width: 70px;
-    height: -20px;
+    height: 300px;
     white-space: wrap;
+}
+
+#section1 img {
+    margin-left: auto;
+    margin-top: 70px;
+    box-shadow: 7px 7px 15px grey;
+    width: 150px;
+    height: auto;
+    -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
 #section1 p {
     color: #36454f;
     margin-left: 50px;
     font-family: 'Noto Sans', sans-serif;
-    margin-top: 100px;
     text-shadow: 7px 7px 15px grey;
     white-space: wrap;
+    font-size: 10px;
 }
 #section_1 {
     font-family: 'Noto Sans', sans-serif;
@@ -106,7 +108,7 @@
 #section2 img {
     margin-top: 10px;
     margin-left: 20px;
-
+    float: left;
 }
 #section2 p {
     color:#36454f;
