--- a/css/monitor.css
+++ b/css/monitor.css
@@ -44,6 +44,8 @@
     margin-top: 100px;
     box-shadow: 7px 7px 15px grey;
     white-space: wrap;
+    width: 350px;
+    height: auto;
     -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
