--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 350px) and (max-width: 822px){
+@media screen and (min-width: 500px) and (max-width: 627px){
 
     html {
         scroll-behavior: scroll;
@@ -13,8 +13,6 @@
     padding: 25px 0px 25px 0px;
 }
 #nav ul li {
-    float: left;
-    margin-left: 3%;
     list-style: none;
     font-family: 'Noto Sans', sans-serif;
 
@@ -22,6 +20,7 @@
 #nav ul li a {
     text-decoration: none;
     color: purple;
+    font-size: 15px;
 }
 .podswietl {
     opacity: 0.2 ;
@@ -30,21 +29,20 @@
     font-family: 'Noto Sans', sans-serif;
     color: #36454f;
     font-size: 20px;
-    padding: 40px 0px 15px 40%;
+    padding: 40px 0px 15px 25%;
     weight: bold;
 }
 #section1 {
     width: 50%;
-    height: 500px;
-    float: left;
+    height: 300px;
+    white-space: wrap;
 }
 #section1 img {
     margin-left: 20%;
     margin-top: 100px;
     box-shadow: 7px 7px 15px grey;
-    width: 100px;
-    height: -220px;
-    white-space: wrap;
+    width: 300px;
+    height: auto;
     -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
     clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
 }
